--- a/css/global.css
+++ b/css/global.css
@@ -1,1 +1,285 @@
 /* // modal header footer */
+
+.header {
+ padding-top: 3rem;
+  color: var(--dark);
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 10;
+  transition: all 0.3s ease;
+}
+.purple {
+  background-color: #FFF5EB;
+  padding-top: 1rem;
+}
+.header__top-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+}
+.header__search {
+  width: 18rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--dark);
+}
+.header__search img {
+  cursor: pointer;
+}
+.header__search input {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  padding-bottom: 1.1rem;
+}
+.header__search input:active {
+  border: none;
+  outline: none;
+}
+.header__search input::placeholder {
+  font-weight: 400;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.16em;
+  text-transform: uppercase;
+}
+
+.header__cta {
+  width: 9.6rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header__cta img {
+  cursor: pointer;
+}
+
+.nav__list {
+  width: 81.5rem;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.nav__link {
+  font-weight: 500;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.16em;
+  text-transform: uppercase;
+  color: var(--dark);
+}
+.bag,
+.burger {
+  display: none;
+  cursor: pointer;
+}
+
+/* burger */
+
+.modal {
+  /* display: none; */
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--dark);
+  z-index: 100;
+  padding: 15rem 0 0;
+  transform: translateY(-1000px);
+}
+.db {
+  transform: translateY(0px);
+
+  transition: 800ms;
+}
+.close-modal {
+  color: var(--light);
+  font-size: 2.4rem;
+  position: fixed;
+  right: 2rem;
+  top: 2rem;
+  cursor: pointer;
+}
+.modal__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.modal__item {
+  margin-bottom: 2rem;
+}
+.modal__item:hover {
+  transform: scale(1.1);
+}
+.modal__link {
+  font-size: 2rem;
+  line-height: 142.83%;
+  text-align: center;
+  letter-spacing: 0.4em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+/* footer */
+
+.footer {
+  padding: 8rem 0 2.4rem;
+  background-color: var(--dark);
+  color: var(--light);
+}
+.footer__wrapper {
+  display: flex;
+}
+.footer__title {
+  font-weight: 500;
+  font-size: 2.4rem;
+  line-height: 2.9rem;
+  text-transform: uppercase;
+  width: 32.8rem;
+  margin-right: 13.1rem;
+}
+.footer__form {
+  margin-right: 12.9rem;
+  width: 32.8rem;
+}
+.footer__form h4 {
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 172.69%;
+  letter-spacing: 0.205em;
+  text-transform: uppercase;
+  margin-bottom: 1.9rem;
+}
+.footer__form p {
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 159.5%;
+  margin-bottom: 1.6rem;
+}
+.form__input {
+  width: 100%;
+  padding: 1.6rem;
+  display: flex;
+  justify-content: space-between;
+
+  border: 0.1rem solid #ffffff4d;
+  margin-bottom: 1.6rem;
+}
+.form__input input {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  color: var(--light);
+}
+.form__input input::placeholder {
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 159.5%;
+  color: var(--light);
+  opacity: 0.5;
+}
+
+.footer__socials img {
+  margin-right: 1.6rem;
+}
+.footer__nav {
+  display: flex;
+  column-gap: 6.4rem;
+}
+.footer__nav__title {
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 172.69%;
+  letter-spacing: 0.205em;
+  text-transform: uppercase;
+  margin-bottom: 2rem;
+}
+.footer__nav__list a {
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 159.5%;
+  color: var(--light);
+  margin-bottom: 0.8rem;
+}
+.footer__brand {
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 159.5%;
+  color: var(--light);
+
+  opacity: 0.3;
+}
+/* media */
+@media (max-width: 850px) {
+  .nav__link {
+    font-size: 1rem;
+  }
+
+  .nav__list {
+    width: 68.5rem;
+  }
+  .footer__title {
+    font-size: 1.4rem;
+    width: 19.8rem;
+    margin-right: 2.1rem;
+  }
+  .footer__form {
+    margin-right: 3.9rem;
+    width: 20.8rem;
+  }
+}
+@media (max-width: 600px) {
+  .header__search,
+  .header__cta {
+    display: none;
+  }
+  .header__nav {
+    display: none;
+  }
+  .bag,
+  .burger {
+    display: block;
+  }
+  .nav {
+    display: none;
+  }
+  .header__logo {
+    width: 13.4rem;
+  }
+  .header__top-bar {
+    padding: 1.6rem 0;
+    margin: 0;
+  }
+  .header {
+    padding: 0;
+  }
+
+  .footer {
+    padding: 4rem 0.6rem 1.2rem;
+  }
+  .footer__wrapper {
+    flex-direction: column;
+  }
+  .footer__title {
+    font-weight: 500;
+    font-size: 1.6rem;
+    line-height: 2rem;
+    text-transform: uppercase;
+    width: 78%;
+    margin-right: 0;
+    margin-bottom: 2.7rem;
+  }
+  .footer__form {
+    margin-right: 0;
+    width: 100%;
+    margin-bottom: 2.4rem;
+  }
+  .footer__brand {
+    text-align: center;
+    margin-top: 4rem;
+  }
+}
