--- a/css/home.css
+++ b/css/home.css
@@ -5,3 +5,6 @@
 @import "./home/banner-slider.css";
 @import "./home/designers.css";
 @import "./home/blog.css";
+.swiper-button-disabled {
+    display: none !important;
+}
