--- a/css/home/designers.css
+++ b/css/home/designers.css
@@ -9,7 +9,7 @@
 }
 .designers__slider .swiper-slide h3 {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 160%;
   text-align: center;
   color: var(--dark);
