--- a/css/home/new-collection.css
+++ b/css/home/new-collection.css
@@ -35,10 +35,10 @@
 }
 .new-collection__content p {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 159.5%;
   text-align: center;
-  margin-bottom: 122px;
+  margin-bottom: 12.2rem;
 }
 .new-collection__content a {
   font-weight: 700;
