--- a/css/home/blog.css
+++ b/css/home/blog.css
@@ -1,8 +1,93 @@
 .blog {
-    padding: 8rem 0 6.2rem;
-    background-color: #FFF5EB;
+  padding: 8rem 0 6.2rem;
+  background-color: #fff5eb;
 }
 
 .blog__grid {
-    
+  display: grid;
+  grid-template-columns: 23% 24.2% 24.2% 24.2%;
+  gap: 0 1.6rem;
+  justify-content: center;
+}
+.blog__img {
+  width: 100%;
+}
+.blog__content h2 {
+    margin-top: 13.2rem;
+    margin-bottom: 4rem;
+  font-weight: 700;
+  font-size: 4.8rem;
+  line-height: 100%;
+  text-transform: uppercase;
+  color: #292929;
+}
+.blog__content a {
+  font-weight: 700;
+  font-size: 1.6rem;
+  line-height: 160%;
+  text-align: center;
+  color: var(--dark);
+}
+.blog__card {
+  display: flex;
+  flex-direction: column;
+  color: var(--dark);
+}
+.blog__card span {
+  margin-top: 1.6rem;
+  margin-bottom: 0.8rem;
+  font-weight: 300;
+  font-size: 1.0rem;
+  line-height: 172.69%;
+  letter-spacing: 0.205em;
+  text-transform: uppercase;
+}
+.blog__card h4 {
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 160%;
+  color: #292929;
+  margin-bottom: 0.8rem;
+}
+.blog__card p {
+  font-weight: 500;
+  font-size: 1.4rem;
+  line-height: 159.5%;
+  color: #7c7c7c;
+  margin-bottom: 1.6rem;
+}
+.blog__card a {
+  font-weight: 700;
+  font-size: 1.0rem;
+  line-height: 172.69%;
+  letter-spacing: 0.205em;
+  text-transform: uppercase;
+  color: var(--dark);
+}
+
+/* media */
+
+@media(max-width:600px) {
+    .blog {
+        padding: 4rem 0 2rem;
+        background-color: #fff5eb;
+    }
+    .blog__grid {
+        grid-template-columns: 100%;
+    }
+    .blog__content h2 {
+        margin-top: 0;
+        margin-bottom: 1.6rem;
+        font-size: 3.2rem;
+        line-height: 110%;
+        text-align: center;
+    }
+    .blog__content a  {
+        text-align: center;
+        margin-bottom: 3.3rem;
+        display: block;
+    }
+    .blog__card {
+        margin-bottom: 2rem;
+    }
 }
