--- a/css/global.css
+++ b/css/global.css
@@ -52,6 +52,21 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
+}
+.heart__badge {
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  background-color: red;
+  color: white;
+  z-index: 5;
+  border-radius: 30%;
+  top: -3px;
+  left: 50px;
+  display: none;
+  align-items: center;
+  justify-content: center;
 }
 .header__cta img {
   cursor: pointer;
